holy shit i forgot inner.html does not exist

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
-	
+
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -59,102 +59,102 @@
 
 	<section class="main clearfix">
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/jupiterseye.jpg" class="media" alt="Jupiter's Eye"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Jupiter's Eye</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/innergrowth_sq.jpg" class="media" alt="Inner Growth"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Inner Growth</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/goddess_sq.jpg" class="media" alt="Goddess of the Sun"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Goddess of the Sun</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/swimmingpools_sq.jpg" class="media" alt="Swimming Pools"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Swimming Pools</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/drown.jpg" class="media" alt="Drown"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Drown</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/menace_sq.jpg" class="media" alt="Menace To Society"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Menace II Society</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/evangelia.jpg" class="media" alt="Evangelia"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Evangelia</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/headintheclouds_sq.jpg" class="media" alt="Head in the CLouds"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Head in the Clouds</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 
 		<div class="work">
-			<a href="inner.html">
+			<!-- a link goes here -->
 				<img src="img/cherry_sq.jpg" class="media" alt="Cherry"/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>Cherry</h1>
 					</div>
 				</div>
-			</a>
+			<!-- a link goes here -->
 		</div>
 	</section><!-- end main -->
 
