corrected prices, updated portfolio

--- a/commissions.html
+++ b/commissions.html
@@ -100,26 +100,26 @@
 
 			<div class="option">
 				<h5><img src="img/innergrowth_sq.jpg" alt="canvas art option" />Canvas Art</h5>
-				<p><b>$40</b>+ — Price depends on complexity.</p>
+				<p><b>$40</b>+ — Price depends on size and complexity.</p>
 			</div>
 
 			<div class="option">
 				<h5><img src="img/denimjacket.jpg" alt="denim jacket option" />Denim Jacket</h5>
-				<p><b>$30</b> + cost of jacket.
+				<p><b>$50</b> + cost of jacket.
 					<br>(Feel free to mail me your own!)
 				</p>
 			</div>
 
 			<div class="option">
 				<h5><img src="img/vangogh.jpg" alt="pocket shirt option" />Pocket Shirt</h5>
-				<p><b>$15</b> + cost of shirt.
-					<br>($6 from H&M!)
+				<p><b>$20</b>
+					<br>
 				</p>
 			</div>
 
 			<div class="option">
 				<h5><img src="img/gradcap.jpg" alt="grad cap option" />Graduation Cap</h5>
-				<p><b>$23</b> — All craft materials are covered!	</p>
+				<p><b>$22</b> — All craft materials are covered!	</p>
 			</div>
 
 		</div>
