--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,7 @@
 				<div class="column">
 					<img src="img/jupiterseye.jpg" alt="Jupiter's Eye"/>
 					<img src="img/icecream.jpg" alt="Ice Cream"/>
+					<img src="img/headintheclouds2_sq.jpg" alt="Head in the Clouds, Pt. 2"/>
 				</div>
 
 				<div class="column">
@@ -99,7 +100,8 @@
 
 				<div class="column">
 					<img src="img/headintheclouds.jpg" alt="Head in the Clouds"/>
-					<img src="img/swimmingpools_sq.jpg" alt="Vortex"/>
+					<img src="img/swimmingpools_sq.jpg" alt="Swimming Pools"/>
+					<img src="img/waterfall.jpg" alt="Waterfall"/>
 				</div>
 			</div>
 		</div>
@@ -110,6 +112,7 @@
 				<div class="column">
 					<img src="img/inktoberday1.jpg" alt="Inktober Day 1"/>
 					<img src="img/inktoberday4.jpg" alt="Inktober Day 4"/>
+					<img src="img/mybodynotyours.jpg" alt="My Body Not Yours"/>
 				</div>
 
 				<div class="column">
@@ -120,6 +123,7 @@
 				<div class="column">
 					<img src="img/inktoberday3.jpg" alt="Inktober Day 3"/>
 					<img src="img/inktoberday6.jpg" alt="Inktober Day 6"/>
+					<img src="img/reverie.jpg" alt="Reverie"/>
 				</div>
 			</div>
 		</div>
