yeah no, switching to the meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="Ekemini Nkanta">
 	<meta name="description" content="NYC artist Ekemini Nkanta (@kimi.draws_) creates watercolor and acrylic paintings & tries to survive college. Explore her portfolio, shop, story, and social media here."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+	<meta name="google-site-verification" content="nrSVp7efPfFZvmr50FdR3MTHcNpV7mC-XPC7hUapc9s" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
