uploaded commission poster, made site mobile friendly

--- a/commissions.html
+++ b/commissions.html
@@ -82,45 +82,8 @@
 	<section class="main clearfix contrast">
 		<div class="content">
 
-			<h5 class="title">Options</h5>
-			<div class="option">
-				<h5><img src="img/evangelia.jpg" alt="watercolor option" />Watercolor</h5>
-				<p>Icon: <b>$20</b>
-					<br>Half body: <b>$28</b>
-					<br>Full body: <b>$36</b>
-					<br>Concept art starts at <b>$50</b>.
-				</p>
-			</div>
-
-			<div class="option">
-				<h5><img src="img/jupiterseye.jpg" alt="fluid acrylic option" />Fluid Acrylic</h5>
-				<p><b>$24</b> — Choose any color palette!
-				</p>
-			</div>
-
-			<div class="option">
-				<h5><img src="img/innergrowth_sq.jpg" alt="canvas art option" />Canvas Art</h5>
-				<p><b>$40</b>+ — Price depends on size and complexity.</p>
-			</div>
-
-			<div class="option">
-				<h5><img src="img/denimjacket.jpg" alt="denim jacket option" />Denim Jacket</h5>
-				<p><b>$50</b> + cost of jacket.
-					<br>(Feel free to mail me your own!)
-				</p>
-			</div>
-
-			<div class="option">
-				<h5><img src="img/vangogh.jpg" alt="pocket shirt option" />Pocket Shirt</h5>
-				<p><b>$20</b>
-					<br>
-				</p>
-			</div>
-
-			<div class="option">
-				<h5><img src="img/gradcap.jpg" alt="grad cap option" />Graduation Cap</h5>
-				<p><b>$22</b> — All craft materials are covered!	</p>
-			</div>
+			<h5 class="title" style="border-bottom: 1px solid #dadada;">Options</h5>
+			<img src="img/commission-graphic.png" alt="commission poster" />
 
 		</div>
 </section><!-- end contrast -->
